--- a/files/bat.config
+++ b/files/bat.config
@@ -18,7 +18,8 @@
 # disable text selection, unless you press shift.
 #--pager="less --RAW-CONTROL-CHARS --quit-if-one-screen --mouse"
 # Use less, until moar has added --quit-if-one-screen support: https://github.com/walles/moar/issues/113
---pager="less"
+#--pager="less"
+--pager="moar --quit-if-one-screen"
 
 # Syntax mappings: map a certain filename pattern to a language.
 #   Example 1: use the C++ syntax for Arduino .ino files
