--- a/tasks/python.yml
+++ b/tasks/python.yml
@@ -22,13 +22,6 @@
   tags: always
   check_mode: no
 
-# - name: Symlink Python 3 to /Library/Frameworks
-#   become: true
-#   file:
-#     src: /usr/local/Frameworks/Python.framework
-#     dest: /Library/Frameworks/Python.framework
-#     mode: 0775
-#     state: link
-#   tags:
-#     - python
-#     - sudo
+
+# TODO ansible
+# installed manually with git clone https://github.com/pyenv/pyenv-virtualenv.git $(pyenv root)/plugins/pyenv-virtualenv
