several fixes for fresh machine

--- a/roles/nvim/tasks/main.yml
+++ b/roles/nvim/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: brew install neovim
-  homebrew: name=neovim state=latest
+  homebrew: name=neovim state=present
   tags:
     - brew
 
