--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -11,6 +11,12 @@
   tags:
     - sudo
 
+- name: Python3 user base location
+  command: python3 -m site --user-base
+  register: python_user_base
+  tags: always
+  check_mode: no
+
 # https://gist.github.com/SheldonWangRJT/8d3f44a35c8d1386a396b9b49b43c385
 - name: ~/zsh-functions
   copy:
